crates/nash-codegen/src/snapshots/nash_codegen__force_delay_tests__cold_branch.snap
---
source: crates/nash-codegen/src/force_delay_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
case@Bool false of
  True -> force (delay (trace "selected" in 42))
  False -> 0
--- core after
case@Bool false of
  True -> trace "selected" in 42
  False -> 0
--- uplc before
(program 1.1.0
  (case
    (con bool False)
    (con integer 0)
    (force
      (delay
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))])))))
--- uplc after
(program 1.1.0
  (case
    (con bool False)
    (con integer 0)
    (force
      [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))])))
--- result
(con integer 0)
--- logs
[]
