crates/nash-codegen/src/snapshots/nash_codegen__force_delay_tests__exposed_let.snap
---
source: crates/nash-codegen/src/force_delay_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
let y#2 : int = force (delay (let x#1 : int = trace "inner" in 21 in
x#1)) in
addInteger y#2 21
--- core after
let y#2 : int = let x#1 : int = trace "inner" in 21 in
x#1 in
addInteger y#2 21
--- uplc before
(program 1.1.0
  [(lam y_2 [[(builtin addInteger) y_2] (con integer 21)])
    (force
      (delay
        [(lam x_1 x_1)
          (force
            [[(force (builtin trace)) (con string "inner")] (delay (con integer 21))])]))])
--- uplc after
(program 1.1.0
  [(lam y_2 [[(builtin addInteger) y_2] (con integer 21)])
    [(lam x_1 x_1)
      (force
        [[(force (builtin trace)) (con string "inner")] (delay (con integer 21))])]])
--- result
(con integer 42)
--- logs
["inner"]
