crates/nash-codegen/src/snapshots/nash_codegen__force_delay_tests__failure.snap
---
source: crates/nash-codegen/src/force_delay_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
force (delay (trace "before failure" in error))
--- core after
trace "before failure" in error
--- uplc before
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "before failure")] (delay (error))]))))
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before failure")] (delay (error))]))
--- result
error: ExplicitErrorTerm
--- logs
["before failure"]
