crates/nash-codegen/src/snapshots/nash_codegen__force_delay_tests__invalid_force.snap
---
source: crates/nash-codegen/src/force_delay_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
force 42
--- core after
force 42
--- uplc before
(program 1.1.0 (force (con integer 42)))
--- uplc after
(program 1.1.0 (force (con integer 42)))
--- result
error: NonPolymorphicInstantiation(Con(Integer(42)))
--- logs
[]
