crates/nash-codegen/src/snapshots/nash_codegen__force_delay_tests__reverse_pair.snap
---
source: crates/nash-codegen/src/force_delay_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
delay (force 42)
--- core after
delay (force 42)
--- uplc before
(program 1.1.0 (delay (force (con integer 42))))
--- uplc after
(program 1.1.0 (delay (force (con integer 42))))
--- result
(delay (force (con integer 42)))
--- logs
[]
